--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,15 @@ readme = "README.md"
 
 requires-python = ">=3.10,<3.13"
 dependencies = [
-    "crewai (>=0.157.0,<0.158.0)",
+    "crewai[tools] (>=1.3.0,<2.0.0)",
     "pydantic (>=2.11.5,<3.0.0)",
     "ivcap-ai-tool (>=0.7.17,<0.8.0)",
-    "langchain-core (>=0.3.62,<0.4.0)",
-    "datamodel-code-generator (>=0.30.1,<0.31.0)",
-    "embedchain (>=0.1.128,<0.2.0)",
-    "crewai-tools (>=0.46.0,<0.47.0)",
-    "pyjwt (>=2.0.0,<3.0.0)",
-    "ivcap-service (>=0.6.7,<0.7.0)"
+    "datamodel-code-generator (>=0.35.0,<1.0.0)",
+    "pyjwt (>=2.10.0,<3.0.0)",
+    "ivcap-service (>=0.6.7,<0.7.0)",
+    "chromadb (>=0.4.0)",
+    "qdrant-client (>=1.14.3)",
+    "litellm (>=1.0.0,<2.0.0)"
 ]
 
 [tool.poetry]
