--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ service-file = "service.py"
 service-id = "urn:ivcap:service:01555c28-32d0-5839-b92b-f3e52410d6dd"
 service-type = "lambda"
 port = 8077
+policy = "urn:ivcap:policy:ivcap.open.metadata"
 # docker
 #docker-run-opts = ["--port", "9999" ]
 
